Fixed the broken links to the resources

--- a/Components/screen.kv
+++ b/Components/screen.kv
@@ -2,16 +2,13 @@ MDScreen:
     name:"main"
     MDFloatLayout:
         md_bg_color:1,1,1,1
-        # Image:
-        #     source:"Park-n-Go/Components/assets/back.png"
-        #     pos_hint:{"center_x": .18, "center_y": .95}
         Image:
-            source:"Park-n-Go/Components/assets/logo.png"
-            size_hint:1.2, 1.2
+            source:"assets/logo.png"
+            size_hint:.8,.8
             pos_hint:{"center_x": .5, "center_y": .65}
         MDLabel:
-            text:"Welcome to Park-n-Go. Press the button below to authenticate yourself into the das"
-            font_size: "14sp"
+            text:"Welcome to Park-n-Go. Press the button below to authenticate yourself into the dashboard"
+            font_size: "16sp"
             size_hint_x: .85
             pos_hint: {"center_x":.5, "center_y": .3}
             halign:"center"
