Added some UI elements

--- a/Components/screen.kv
+++ b/Components/screen.kv
@@ -4,8 +4,14 @@ MDScreen:
         md_bg_color:1,1,1,1
         Image:
             source:"assets/logo.png"
-            size_hint:.8,.8
+            size_hint:.65,.65
             pos_hint:{"center_x": .5, "center_y": .65}
+        MDLabel:
+            text:"H e l l o  W o r l d"
+            font_size: "23sp"
+            pos_hint: {"center_y": .38}
+            halign:"center"
+            color:rgba(34, 34, 34, 255)
         MDLabel:
             text:"Welcome to Park-n-Go. Press the button below to authenticate yourself into the dashboard"
             font_size: "16sp"
