Incorporated the new fonts onto the UI

--- a/Components/screen.kv
+++ b/Components/screen.kv
@@ -8,12 +8,14 @@ MDScreen:
             pos_hint:{"center_x": .5, "center_y": .65}
         MDLabel:
             text:"H e l l o  W o r l d"
+            font_name: "BPoppins"
             font_size: "23sp"
             pos_hint: {"center_y": .38}
             halign:"center"
             color:rgba(34, 34, 34, 255)
         MDLabel:
             text:"Welcome to Park-n-Go. Press the button below to authenticate yourself into the dashboard"
+            font_name: "MPoppins"
             font_size: "16sp"
             size_hint_x: .85
             pos_hint: {"center_x":.5, "center_y": .3}
