Renamed to Get-Started

--- a/Components/screen.kv
+++ b/Components/screen.kv
@@ -22,7 +22,7 @@ MDScreen:
             halign:"center"
             color:rgba(127, 127, 127, 255)
         Button:
-            text: "LOGIN"
+            text: "GET   STARTED"
             size_hint: .66, .065
             pos_hint:{"center_x": .5,"center_y": .09}
             background_color:0, 0, 0, 0
