--- a/Components/login.kv
+++ b/Components/login.kv
@@ -20,9 +20,8 @@
             text_field.password = False if text_field.password is True else True
 
 
-MDScreen:
+<Login>:
     name: "login"
-    id: 111
     MDFloatLayout:
         md_bg_color: 1,1,1,1
         MDIconButton:
@@ -32,8 +31,7 @@ MDScreen:
             theme_text_color: "Custom"
             text_color: rgba(26, 24, 58, 255)
             on_release:
-                root.manager.transition.direction = "right"
-                root.manager.current = "main"
+                app.root.current = "screen1"
         MDLabel:
             text:"W e l c o m e !"
             font_name: "MPoppins"
@@ -48,7 +46,7 @@ MDScreen:
             color:rgba(135, 133, 193, 255)
         
         MDTextField:
-            id: text_field_error
+            id: text1
             hint_text: "Enter User ID"
             helper_text: "User ID minimum 8 characters"
             helper_text_mode: "on_error"
@@ -56,6 +54,7 @@ MDScreen:
             size_hint_x: .78
             min_text_length: 5
         ClickableTextFieldRound:
+            id: passw
             size_hint_x: None
             width: "300dp"
             hint_text: "Password"
@@ -67,8 +66,7 @@ MDScreen:
             pos_hint:{"center_x": .5,"center_y": .09}
             background_color:0, 0, 0, 0
             on_release:
-                root.manager.transition.direction="left"
-                root.manager.current="login"
+                app.hello()
             canvas.before:
                 Color:
                     rgb: rgba(52, 0, 231, 255)
