--- a/Components/login.kv
+++ b/Components/login.kv
@@ -1,25 +1,4 @@
 #:kivy 1.0
-<ClickableTextFieldRound>:
-    size_hint_y: None
-    height: text_field.height
-
-    MDTextField:
-        id: text_field
-        hint_text: root.hint_text
-        text: root.text
-        password: True
-        icon_left: "key-variant"
-
-    MDIconButton:
-        icon: "eye-off"
-        pos_hint: {"center_y": .7}
-        pos: text_field.width - self.width + dp(8), 0
-        theme_text_color: "Hint"
-        on_release:
-            self.icon = "eye" if self.icon == "eye-off" else "eye-off"
-            text_field.password = False if text_field.password is True else True
-
-
 <Login>:
     name: "login"
     MDFloatLayout:
@@ -53,13 +32,29 @@
             pos_hint: {"center_x": .5, "center_y": .67}
             size_hint_x: .78
             min_text_length: 5
-        ClickableTextFieldRound:
-            id: passw
+        MDRelativeLayout:
             size_hint_x: None
             width: "300dp"
-            hint_text: "Password"
             size_hint: .8, .07
             pos_hint: {"center_x": .5, "center_y": .53}
+            size_hint_y: None
+            height: passw.height
+
+            MDTextField:
+                id: passw
+                hint_text: "Password"
+                password: True
+                icon_left: "key-variant"
+
+            MDIconButton:
+                icon: "eye-off"
+                pos_hint: {"center_y": .7}
+                pos: passw.width - self.width + dp(8), 0
+                theme_text_color: "Hint"
+                on_release:
+                    self.icon = "eye" if self.icon == "eye-off" else "eye-off"
+                    passw.password = False if passw.password is True else True
+
         Button:
             text: "SIGN IN"
             size_hint: .66, .065
