--- a/Components/welcomeScreen.kv
+++ b/Components/welcomeScreen.kv
@@ -1,6 +1,6 @@
 #:kivy 1.0
-<Screen1>:
-    name:"main"
+<WelcomeScreen>:
+    name:"welcomeScreen"
     MDFloatLayout:
         md_bg_color:1,1,1,1
         Image:
