--- a/Components/login.kv
+++ b/Components/login.kv
@@ -24,15 +24,23 @@
             font_size: "20sp"
             pos_hint: {"center_x":.6, "center_y": .79}
             color:rgba(135, 133, 193, 255)
-        
-        MDTextField:
-            id: text1
-            hint_text: "Enter User ID"
-            helper_text: "User ID minimum 8 characters"
-            helper_text_mode: "on_error"
-            pos_hint: {"center_x": .5, "center_y": .67}
-            size_hint_x: .78
-            min_text_length: 5
+        MDRelativeLayout:
+            size_hint_x: None
+            width: "300dp"
+            size_hint: 1.02, .07
+            pos_hint: {"center_x": .5, "center_y": .63}
+            size_hint_y: None
+            height: text1.height
+
+            MDTextField:
+                id: text1
+                hint_text: "Enter User ID"
+                helper_text: "User ID minimum 8 characters"
+                helper_text_mode: "on_error"
+                pos_hint: {"center_x": .5, "center_y": .67}
+                size_hint_x: .78
+                min_text_length: 5
+                icon_left: "account"
         MDRelativeLayout:
             size_hint_x: None
             width: "300dp"
