Added gif animation on start

--- a/Components/welcomeScreen.kv
+++ b/Components/welcomeScreen.kv
@@ -4,9 +4,11 @@
     MDFloatLayout:
         md_bg_color:1,1,1,1
         Image:
-            source:"assets/logo.png"
+            source:"assets/Park_n_Go.gif"
             size_hint:.65,.65
             pos_hint:{"center_x": .5, "center_y": .65}
+            anim_delay: 0.05
+            anim_loop: 1
         MDLabel:
             text:"H e l l o  W o r l d"
             font_name: "BPoppins"
