Added Register Screen

--- a/Components/login.kv
+++ b/Components/login.kv
@@ -83,7 +83,7 @@
             on_release:
                 app.hello()
                 app.root.transition.direction="left"
-                app.root.current="mainscreen"
+                app.root.current="register"
             canvas.before:
                 Color:
                     rgb: rgba(52, 0, 231, 255)
