--- a/Components/main.kv
+++ b/Components/main.kv
@@ -1,12 +1,15 @@
 #: import WelcomeScreen Components.welcomeScreen.WelcomeScreen
 #: import Login Components.login.Login
+#: import Register Components.register.Register
 #: import MainScreen Components.mainscreen.MainScreen
 
 #:include Components/welcomeScreen.kv
 #:include Components/login.kv
+#:include Components/register.kv
 #:include Components/mainscreen.kv
 
 WindowManager:
     WelcomeScreen:
     Login:
+    Register:
     MainScreen:
