--- a/Components/mainscreen.kv
+++ b/Components/mainscreen.kv
@@ -11,7 +11,7 @@
             text_color: rgba(52, 0, 231, 255)
             on_release:
                 app.root.transition.direction="right"
-                app.root.current = "login"
+                app.root.current = "register"
         MDLabel:
             text:"ADMIN Portal"
             font_name: "MPoppins"
