Connected Screen to main.kv

--- a/Components/main.kv
+++ b/Components/main.kv
@@ -1,15 +1,18 @@
 #: import WelcomeScreen Components.welcomeScreen.WelcomeScreen
 #: import Login Components.login.Login
 #: import Register Components.register.Register
+#: import Billing Components.billing.Billing
 #: import MainScreen Components.mainscreen.MainScreen
 
 #:include Components/welcomeScreen.kv
 #:include Components/login.kv
 #:include Components/register.kv
+#:include Components/billing.kv
 #:include Components/mainscreen.kv
 
 WindowManager:
     WelcomeScreen:
     Login:
     Register:
+    Billing:
     MainScreen:
