--- a/Components/mainscreen.kv
+++ b/Components/mainscreen.kv
@@ -107,7 +107,7 @@
             pos_hint:{"center_x": .5,"center_y": .09}
             background_color:0, 0, 0, 0
             on_release:
-                app.hello()
+                app.save()
                 app.root.transition.direction="left"
                 app.root.current="mainscreen"
             canvas.before:
