Imported Screens to main.kv

--- a/Components/main.kv
+++ b/Components/main.kv
@@ -2,12 +2,14 @@
 #: import Login Components.login.Login
 #: import Register Components.register.Register
 #: import Billing Components.billing.Billing
+#: import Receipt Components.receipt.Receipt
 #: import MainScreen Components.mainscreen.MainScreen
 
 #:include Components/welcomeScreen.kv
 #:include Components/login.kv
 #:include Components/register.kv
 #:include Components/billing.kv
+#:include Components/receipt.kv
 #:include Components/mainscreen.kv
 
 WindowManager:
@@ -15,4 +17,5 @@ WindowManager:
     Login:
     Register:
     Billing:
+    Receipt:
     MainScreen:
