--- a/Components/login.kv
+++ b/Components/login.kv
@@ -81,9 +81,10 @@
             pos_hint:{"center_x": .5,"center_y": .09}
             background_color:0, 0, 0, 0
             on_release:
-                app.hello()
-                app.root.transition.direction="left"
-                app.root.current="register"
+                app.show_alert_dialog()
+                # app.root.transition.direction="left"
+                # app.root.current="register"
+                
             canvas.before:
                 Color:
                     rgb: rgba(52, 0, 231, 255)
