Working of Tabs on input field

--- a/Components/login.kv
+++ b/Components/login.kv
@@ -36,6 +36,7 @@
 
             MDTextField:
                 id: text1
+                write_tab: False
                 hint_text: "Enter User ID"
                 helper_text: "User ID minimum 8 characters"
                 helper_text_mode: "on_error"
@@ -54,6 +55,7 @@
 
             MDTextField:
                 id: passw
+                write_tab: False
                 hint_text: "Password"
                 password: True
                 icon_left: "key-variant"
