--- a/Components/mainscreen.kv
+++ b/Components/mainscreen.kv
@@ -35,6 +35,7 @@
 
             MDTextField:
                 id: regNo
+                write_tab: False
                 hint_text: "Enter registration number"
                 pos_hint: {"center_x": .5, "center_y": .67}
                 size_hint_x: .78
@@ -51,6 +52,7 @@
 
             MDTextField:
                 id: name
+                write_tab: False
                 hint_text: "Enter name"
                 pos_hint: {"center_x": .5, "center_y": .54}
                 size_hint_x: .78
@@ -67,6 +69,7 @@
 
             MDTextField:
                 id: phno
+                write_tab: False
                 hint_text: "Enter Phone number"
                 pos_hint: {"center_x": .5, "center_y": .44}
                 size_hint_x: .78
