Connected screen to the App

--- a/Components/main.kv
+++ b/Components/main.kv
@@ -4,6 +4,7 @@
 #: import Billing Components.billing.Billing
 #: import Receipt Components.receipt.Receipt
 #: import MainScreen Components.mainscreen.MainScreen
+#: import Checkout Components.checkout.Checkout
 
 #:include Components/welcomeScreen.kv
 #:include Components/login.kv
@@ -11,6 +12,7 @@
 #:include Components/billing.kv
 #:include Components/receipt.kv
 #:include Components/mainscreen.kv
+#:include Components/checkout.kv
 
 WindowManager:
     WelcomeScreen:
@@ -19,3 +21,4 @@ WindowManager:
     Billing:
     Receipt:
     MainScreen:
+    Checkout:
