--- a/Components/checkout.kv
+++ b/Components/checkout.kv
@@ -47,7 +47,7 @@
 
         MDFloatLayout:
             MDLabel:
-                text:"Select time of entry : "
+                text:"Select time of Exit : "
                 font_name: "MPoppins"
                 font_size: "18sp"
                 pos_hint: {"center_x": .6, "center_y": .55}
