Added the receipt page

--- a/Components/receipt.kv
+++ b/Components/receipt.kv
@@ -20,8 +20,68 @@
             color:rgba(0, 0, 59, 255)
 
         MDLabel:
-            text:"User Recipt"
+            text:"User Receipt"
             font_name: "MPoppins"
             font_size: "20sp"
             pos_hint: {"center_x":.6, "center_y": .79}
+            color:rgba(135, 133, 193, 255)
+        MDLabel:
+            text:"Name: "
+            font_name: "MPoppins"
+            font_size: "20sp"
+            pos_hint: {"center_x":.6, "center_y": .69}
+            color:rgba(135, 133, 193, 255)
+        MDLabel:
+            id: Name
+            font_name: "MPoppins"
+            font_size: "20sp"
+            pos_hint: {"center_x":.98, "center_y": .69}
+            color:rgba(135, 133, 193, 255)
+        MDLabel:
+            text:"Phone Number: "
+            font_name: "MPoppins"
+            font_size: "20sp"
+            pos_hint: {"center_x":.6, "center_y": .59}
+            color:rgba(135, 133, 193, 255)
+        MDLabel:
+            id: phone
+            font_name: "MPoppins"
+            font_size: "20sp"
+            pos_hint: {"center_x":.98, "center_y": .59}
+            color:rgba(135, 133, 193, 255)
+        MDLabel:
+            text:"Registration Number: "
+            font_name: "MPoppins"
+            font_size: "20sp"
+            pos_hint: {"center_x":.6, "center_y": .49}
+            color:rgba(135, 133, 193, 255)
+        MDLabel:
+            id: register
+            font_name: "MPoppins"
+            font_size: "20sp"
+            pos_hint: {"center_x":.98, "center_y": .49}
+            color:rgba(135, 133, 193, 255)
+        MDLabel:
+            text:"Cost: "
+            font_name: "MPoppins"
+            font_size: "20sp"
+            pos_hint: {"center_x":.6, "center_y": .39}
+            color:rgba(135, 133, 193, 255)
+        MDLabel:
+            id: cost
+            font_name: "MPoppins"
+            font_size: "20sp"
+            pos_hint: {"center_x":.98, "center_y": .39}
+            color:rgba(135, 133, 193, 255)
+        MDLabel:
+            text:"Entry Time: "
+            font_name: "MPoppins"
+            font_size: "20sp"
+            pos_hint: {"center_x":.6, "center_y": .29}
+            color:rgba(135, 133, 193, 255)
+        MDLabel:
+            id: phone
+            font_name: "MPoppins"
+            font_size: "20sp"
+            pos_hint: {"center_x":.98, "center_y": .29}
             color:rgba(135, 133, 193, 255)
