Modified Receipt Screen

--- a/Components/receipt.kv
+++ b/Components/receipt.kv
@@ -16,72 +16,97 @@
             text:"R e c e i p t : "
             font_name: "MPoppins"
             font_size: "26sp"
-            pos_hint: {"center_x": .6, "center_y": .85}
+            pos_hint: {"center_x": .6, "center_y": .92}
             color:rgba(0, 0, 59, 255)
 
         MDLabel:
             text:"User Receipt"
             font_name: "MPoppins"
             font_size: "20sp"
-            pos_hint: {"center_x":.6, "center_y": .79}
+            pos_hint: {"center_x":.6, "center_y": .86}
             color:rgba(135, 133, 193, 255)
         MDLabel:
             text:"Name: "
             font_name: "MPoppins"
             font_size: "20sp"
-            pos_hint: {"center_x":.6, "center_y": .69}
+            pos_hint: {"center_x":.6, "center_y": .79}
             color:rgba(135, 133, 193, 255)
         MDLabel:
-            id: Name
+            id: name
             font_name: "MPoppins"
             font_size: "20sp"
-            pos_hint: {"center_x":.98, "center_y": .69}
+            pos_hint: {"center_x":.98, "center_y": .79}
             color:rgba(135, 133, 193, 255)
         MDLabel:
             text:"Phone Number: "
             font_name: "MPoppins"
             font_size: "20sp"
-            pos_hint: {"center_x":.6, "center_y": .59}
+            pos_hint: {"center_x":.6, "center_y": .69}
             color:rgba(135, 133, 193, 255)
         MDLabel:
             id: phone
             font_name: "MPoppins"
             font_size: "20sp"
-            pos_hint: {"center_x":.98, "center_y": .59}
+            pos_hint: {"center_x":.98, "center_y": .69}
             color:rgba(135, 133, 193, 255)
         MDLabel:
             text:"Registration Number: "
             font_name: "MPoppins"
             font_size: "20sp"
-            pos_hint: {"center_x":.6, "center_y": .49}
+            pos_hint: {"center_x":.6, "center_y": .59}
             color:rgba(135, 133, 193, 255)
         MDLabel:
-            id: register
+            id: regNo
+            text: ""
             font_name: "MPoppins"
             font_size: "20sp"
-            pos_hint: {"center_x":.98, "center_y": .49}
-            color:rgba(135, 133, 193, 255)
-        MDLabel:
-            text:"Cost: "
-            font_name: "MPoppins"
-            font_size: "20sp"
-            pos_hint: {"center_x":.6, "center_y": .39}
-            color:rgba(135, 133, 193, 255)
-        MDLabel:
-            id: cost
-            font_name: "MPoppins"
-            font_size: "20sp"
-            pos_hint: {"center_x":.98, "center_y": .39}
+            pos_hint: {"center_x":.98, "center_y": .59}
             color:rgba(135, 133, 193, 255)
         MDLabel:
             text:"Entry Time: "
             font_name: "MPoppins"
             font_size: "20sp"
+            pos_hint: {"center_x":.6, "center_y": .49}
+            color:rgba(135, 133, 193, 255)
+        MDLabel:
+            id: entryTime
+            font_name: "MPoppins"
+            font_size: "20sp"
+            pos_hint: {"center_x":.98, "center_y": .49}
+            color:rgba(135, 133, 193, 255)
+        MDLabel:
+            text:"Exit Time: "
+            font_name: "MPoppins"
+            font_size: "20sp"
+            pos_hint: {"center_x":.6, "center_y": .39}
+            color:rgba(135, 133, 193, 255)
+        MDLabel:
+            id: exitTime
+            font_name: "MPoppins"
+            font_size: "20sp"
+            pos_hint: {"center_x":.98, "center_y": .39}
+            color:rgba(135, 133, 193, 255)
+        MDLabel:
+            text:"Vehicle : "
+            font_name: "MPoppins"
+            font_size: "20sp"
             pos_hint: {"center_x":.6, "center_y": .29}
             color:rgba(135, 133, 193, 255)
         MDLabel:
-            id: phone
+            id: car
             font_name: "MPoppins"
             font_size: "20sp"
             pos_hint: {"center_x":.98, "center_y": .29}
+            color:rgba(135, 133, 193, 255)
+        MDLabel:
+            text:"Amount : "
+            font_name: "MPoppins"
+            font_size: "20sp"
+            pos_hint: {"center_x":.6, "center_y": .19}
+            color:rgba(135, 133, 193, 255)
+        MDLabel:
+            id: amount
+            font_name: "MPoppins"
+            font_size: "20sp"
+            pos_hint: {"center_x":.98, "center_y": .19}
             color:rgba(135, 133, 193, 255)
