--- a/park-n-go/template/index.html
+++ b/park-n-go/template/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receipt</title>
     <style>
-        @media only screen and (min-width:1240px) {
+        @media print, screen and (min-width:1240px) {
             * {
                 padding: 0;
                 margin: 0;
