Added PDFjs to convert html to pdf

--- a/park-n-go/template/index.html
+++ b/park-n-go/template/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js "></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <style>
-        @media print, screen and (min-width:350px) {
+        @media print, screen and (min-width:300px) {
             * {
                 padding: 0;
                 margin: 0;
@@ -195,7 +195,7 @@
         <p class="top_p_2">parkngo@hotmail.com</p>
         <p class="top_p_3">SMIT, Sikkim</p>
         <div class="vl"></div>
-        <img id="img" src="./icon.jpg" height="150px" width="200px">
+        <img id="img" src="https://raw.githubusercontent.com/pooranjoyb/Park-n-Go/master/park-n-go/template/icon.jpg?token=GHSAT0AAAAAAB4254TJA5XGBLQZXM3YRZJYZCFUYAQ" height="150px" width="200px">
     </div>
     <div id="main_1">
         <p id="park_n_go">Park-N-Go</p>
