--- a/park-n-go/template/index.html
+++ b/park-n-go/template/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receipt</title>
+
+    <!-- Importing PDFjs and HTML2Canvas API for converting HTML to PDF  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js "></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <style>
@@ -263,8 +265,11 @@
 </body>
 
 <script>
+    // Fetching the entire screen for Conversion
     window.jsPDF = window.jspdf.jsPDF;
     var docPDF = new jsPDF();
+
+    // Function trigger on Download
     function print() {
         var elementHTML = document.querySelector("#body1");
         docPDF.html(elementHTML, {
