--- a/park-n-go/template/index.html
+++ b/park-n-go/template/index.html
@@ -191,7 +191,10 @@
     </style>
 </head>
 
-<body id="body1">
+<body>
+    <div id="body1">
+
+    
     <div id="top">
         <p class="top_p_1">+91 1234567890</p>
         <p class="top_p_2">parkngo@hotmail.com</p>
@@ -258,6 +261,7 @@
             <p id="Drew">FirstName</p>
         </b>
         <p id="ceo">CEO of Park-n-Go Company</p>
+    </div>
     </div>
     <div id="btn-container">
         <button class="download" onclick="print()">Download Receipt</button>
